--- a/pom.xml
+++ b/pom.xml
@@ -1149,7 +1149,7 @@
         </repository>
     </repositories>
     <properties>
-        <swagger-codegen-generators-version>1.0.27-SNAPSHOT</swagger-codegen-generators-version>
+        <swagger-codegen-generators-version>1.0.26</swagger-codegen-generators-version>
         <swagger-core-version>2.1.9</swagger-core-version>
         <swagger-core-version-v1>1.6.2</swagger-core-version-v1>
         <swagger-parser-version>2.0.26</swagger-parser-version>
